--- a/i18n/sources/dashboard.translations.json
+++ b/i18n/sources/dashboard.translations.json
@@ -258,6 +258,7 @@
     "dashboard.totalWorkOrders": "Total Work Orders",
     "dashboard.trends": "Trends",
     "dashboard.unit": "Unit",
+    "dashboard.workOrderHealth": "Work Order Health",
     "dashboard.units": "units",
     "dashboard.viewAll": "View all",
     "dashboard.viewAssets": "View assets",
@@ -527,6 +528,7 @@
     "dashboard.unit": "وحدة",
     "dashboard.units": "وحدات",
     "dashboard.viewAll": "عرض الكل",
+    "dashboard.workOrderHealth": "صحة أوامر العمل",
     "dashboard.viewAssets": "عرض الأصول",
     "dashboard.viewInvoices": "عرض الفواتير",
     "dashboard.welcome": "مرحباً بعودتك",
