--- a/i18n/sources/reports.translations.json
+++ b/i18n/sources/reports.translations.json
@@ -1,7 +1,11 @@
 {
   "en": {
+    "reports.actions.download": "Download",
     "reports.actions.langToggle": "EN / عربي",
     "reports.actions.newReport": "+ New Report",
+    "reports.actions.retry": "Retry",
+    "reports.actions.retrying": "Retrying",
+    "reports.actions.view": "View",
     "reports.builder.placeholder": "Drag-and-drop report builder interface",
     "reports.customReports": "Custom Reports",
     "reports.dateRange": "Date Range",
@@ -13,6 +17,7 @@
     "reports.footer": "© 2025 Fixzit Enterprise — Version 1.0",
     "reports.generateReport": "Generate Report",
     "reports.operationalReports": "Operational Reports",
+    "reports.page.subtitle": "Dashboards, builders, and exports",
     "reports.page.title": "Reports",
     "reports.printReport": "Print Report",
     "reports.reportTemplates": "Report Templates",
@@ -26,10 +31,12 @@
     "reports.status.running": "Running",
     "reports.table.actions": "Actions",
     "reports.table.lastRun": "Last Run",
+    "reports.table.name": "Name",
     "reports.table.reportName": "Report Name",
     "reports.table.status": "Status",
     "reports.table.type": "Type",
     "reports.tabs.builder": "Report Builder",
+    "reports.tabs.title": "Report Workspace",
     "reports.tabs.viewer": "Report Viewer",
     "reports.title": "Reports",
     "reports.toast.newReportComingSoon": "New report feature coming soon",
@@ -40,8 +47,12 @@
     "reports.viewReport": "View Report"
   },
   "ar": {
+    "reports.actions.download": "تحميل",
     "reports.actions.langToggle": "EN / عربي",
     "reports.actions.newReport": "+ تقرير جديد",
+    "reports.actions.retry": "إعادة المحاولة",
+    "reports.actions.retrying": "جاري إعادة المحاولة",
+    "reports.actions.view": "عرض",
     "reports.builder.placeholder": "واجهة إنشاء التقارير بالسحب والإفلات",
     "reports.customReports": "تقارير مخصصة",
     "reports.dateRange": "نطاق التاريخ",
@@ -53,6 +64,7 @@
     "reports.footer": "© 2025 فيكزيت إنتربرايز — الإصدار 1.0",
     "reports.generateReport": "إنشاء تقرير",
     "reports.operationalReports": "التقارير التشغيلية",
+    "reports.page.subtitle": "لوحات التحكم والبناة والتصدير",
     "reports.page.title": "التقارير",
     "reports.printReport": "طباعة التقرير",
     "reports.reportTemplates": "قوالب التقارير",
@@ -66,10 +78,12 @@
     "reports.status.running": "قيد التشغيل",
     "reports.table.actions": "الإجراءات",
     "reports.table.lastRun": "آخر تشغيل",
+    "reports.table.name": "الاسم",
     "reports.table.reportName": "اسم التقرير",
     "reports.table.status": "الحالة",
     "reports.table.type": "النوع",
     "reports.tabs.builder": "منشئ التقارير",
+    "reports.tabs.title": "مساحة عمل التقارير",
     "reports.tabs.viewer": "عارض التقارير",
     "reports.title": "التقارير",
     "reports.toast.newReportComingSoon": "ميزة إنشاء التقارير الجديدة قادمة قريباً",
