--- a/i18n/sources/finance.translations.json
+++ b/i18n/sources/finance.translations.json
@@ -377,7 +377,7 @@
     "finance.balance.assets": "أصول",
     "finance.balance.equity": "عدالة",
     "finance.balance.error": "فشل تحميل الميزانية العمومية",
-    "finance.balance.forbidden": "[AR] Forbidden",
+    "finance.balance.forbidden": "غير مصرح",
     "finance.balance.liabilities": "الإلتزامات",
     "finance.balance.notOk": "تم اكتشاف عدم تطابق المعادلة",
     "finance.balance.ok": "الأصول = الخصوم + حقوق الملكية",
@@ -527,7 +527,7 @@
     "finance.groupByType": "تجميع حسب النوع",
     "finance.income.error": "فشل في تحميل بيان الدخل",
     "finance.income.expense": "نفقات",
-    "finance.income.forbidden": "[AR] Forbidden",
+    "finance.income.forbidden": "غير مصرح",
     "finance.income.net": "صافي الدخل",
     "finance.income.period": "فترة",
     "finance.income.revenue": "ربح",
