--- a/i18n/sources/help.translations.json
+++ b/i18n/sources/help.translations.json
@@ -25,10 +25,10 @@
     "help.article.breadcrumb.back": "← جميع المقالات",
     "help.article.breadcrumb.home": "مركز المساعدة",
     "help.article.categoryFallback": "عام",
-    "help.article.comments.auth": "[AR] Auth",
+    "help.article.comments.auth": "المصادقة",
     "help.article.comments.error": "خطأ",
-    "help.article.comments.placeholder": "[AR] Placeholder",
-    "help.article.comments.submit": "[AR] Submit",
+    "help.article.comments.placeholder": "أدخل تعليقك هنا",
+    "help.article.comments.submit": "إرسال",
     "help.article.comments.success": "نجح",
     "help.article.comments.title": "العنوان",
     "help.article.feedback.helpfulAria": "علّم المقال كمفيد",
