--- a/i18n/sources/vendor.translations.json
+++ b/i18n/sources/vendor.translations.json
@@ -8,7 +8,7 @@
     "vendor.type": "Vendor Type"
   },
   "ar": {
-    "Vendor": "[AR] Vendor",
+    "Vendor": "مورد",
     "vendor.category": "الفئة",
     "vendor.code": "رمز البائع",
     "vendor.responseTime": "وقت الاستجابة",
