--- a/i18n/sources/helpCenterV2.translations.json
+++ b/i18n/sources/helpCenterV2.translations.json
@@ -49,52 +49,52 @@
     "helpCenterV2.workOrdersTitle": "Work Orders Title"
   },
   "ar": {
-    "helpCenterV2.articlesSubtitle": "[AR] Articles Subtitle",
-    "helpCenterV2.askAssistant": "[AR] Ask Assistant",
-    "helpCenterV2.categories.customerService": "[AR] Customer Service",
-    "helpCenterV2.categories.facilityManagement": "[AR] Facility Management",
-    "helpCenterV2.categories.finance": "[AR] Finance",
-    "helpCenterV2.categories.procurement": "[AR] Procurement",
-    "helpCenterV2.categories.workOrders": "[AR] Work Orders",
-    "helpCenterV2.createTicket": "إنشاء Ticket",
-    "helpCenterV2.emptyArticles": "[AR] Empty Articles",
-    "helpCenterV2.fallbackNotice": "[AR] Fallback Notice",
-    "helpCenterV2.financeCopy": "[AR] Finance Copy",
-    "helpCenterV2.financeTitle": "Finance العنوان",
-    "helpCenterV2.generalCategory": "General الفئة",
-    "helpCenterV2.helpArticles": "[AR] Help Articles",
-    "helpCenterV2.interactiveSubtitle": "[AR] Interactive Subtitle",
-    "helpCenterV2.interactiveTutorials": "[AR] Interactive Tutorials",
-    "helpCenterV2.loadingArticles": "جار التحميل Articles",
-    "helpCenterV2.overviewSubtitle": "[AR] Overview Subtitle",
-    "helpCenterV2.propertiesCopy": "[AR] Properties Copy",
-    "helpCenterV2.propertiesTitle": "Properties العنوان",
-    "helpCenterV2.readMore": "[AR] Read More",
-    "helpCenterV2.subtitle": "[AR] Subtitle",
-    "helpCenterV2.systemOverview": "[AR] System Overview",
+    "helpCenterV2.articlesSubtitle": "تصفح مقالات المساعدة والأدلة",
+    "helpCenterV2.askAssistant": "اسأل المساعد",
+    "helpCenterV2.categories.customerService": "خدمة العملاء",
+    "helpCenterV2.categories.facilityManagement": "إدارة المرافق",
+    "helpCenterV2.categories.finance": "المالية",
+    "helpCenterV2.categories.procurement": "المشتريات",
+    "helpCenterV2.categories.workOrders": "أوامر العمل",
+    "helpCenterV2.createTicket": "إنشاء تذكرة",
+    "helpCenterV2.emptyArticles": "لا توجد مقالات",
+    "helpCenterV2.fallbackNotice": "إشعار احتياطي",
+    "helpCenterV2.financeCopy": "إدارة الفواتير والمدفوعات والميزانيات",
+    "helpCenterV2.financeTitle": "المالية",
+    "helpCenterV2.generalCategory": "الفئة العامة",
+    "helpCenterV2.helpArticles": "مقالات المساعدة",
+    "helpCenterV2.interactiveSubtitle": "تعلم خطوة بخطوة مع دروسنا التفاعلية",
+    "helpCenterV2.interactiveTutorials": "الدروس التفاعلية",
+    "helpCenterV2.loadingArticles": "جاري تحميل المقالات",
+    "helpCenterV2.overviewSubtitle": "تعرف على نظام فيكزيت وإمكانياته",
+    "helpCenterV2.propertiesCopy": "إدارة العقارات والوحدات والمستأجرين",
+    "helpCenterV2.propertiesTitle": "العقارات",
+    "helpCenterV2.readMore": "قراءة المزيد",
+    "helpCenterV2.subtitle": "كيف يمكننا مساعدتك اليوم؟",
+    "helpCenterV2.systemOverview": "نظرة عامة على النظام",
     "helpCenterV2.title": "العنوان",
     "helpCenterV2.tutorials.financialReporting.description": "الوصف",
-    "helpCenterV2.tutorials.financialReporting.duration": "[AR] Duration",
+    "helpCenterV2.tutorials.financialReporting.duration": "المدة",
     "helpCenterV2.tutorials.financialReporting.title": "العنوان",
     "helpCenterV2.tutorials.firstWorkOrder.description": "الوصف",
-    "helpCenterV2.tutorials.firstWorkOrder.duration": "[AR] Duration",
+    "helpCenterV2.tutorials.firstWorkOrder.duration": "المدة",
     "helpCenterV2.tutorials.firstWorkOrder.title": "العنوان",
     "helpCenterV2.tutorials.gettingStarted.description": "الوصف",
-    "helpCenterV2.tutorials.gettingStarted.duration": "[AR] Duration",
+    "helpCenterV2.tutorials.gettingStarted.duration": "المدة",
     "helpCenterV2.tutorials.gettingStarted.title": "العنوان",
     "helpCenterV2.tutorials.tenantRelations.description": "الوصف",
-    "helpCenterV2.tutorials.tenantRelations.duration": "[AR] Duration",
+    "helpCenterV2.tutorials.tenantRelations.duration": "المدة",
     "helpCenterV2.tutorials.tenantRelations.title": "العنوان",
     "helpCenterV2.tutorials.vendorManagement.description": "الوصف",
-    "helpCenterV2.tutorials.vendorManagement.duration": "[AR] Duration",
+    "helpCenterV2.tutorials.vendorManagement.duration": "المدة",
     "helpCenterV2.tutorials.vendorManagement.title": "العنوان",
-    "helpCenterV2.untitledArticle": "[AR] Untitled Article",
-    "helpCenterV2.updated": "[AR] Updated",
-    "helpCenterV2.vendorsCopy": "[AR] Vendors Copy",
-    "helpCenterV2.vendorsTitle": "Vendors العنوان",
-    "helpCenterV2.viewAllTutorials": "عرض الكل Tutorials",
-    "helpCenterV2.viewTickets": "عرض Tickets",
-    "helpCenterV2.workOrdersCopy": "[AR] Work Orders Copy",
-    "helpCenterV2.workOrdersTitle": "Work Orders العنوان"
+    "helpCenterV2.untitledArticle": "مقال بدون عنوان",
+    "helpCenterV2.updated": "تم التحديث",
+    "helpCenterV2.vendorsCopy": "إدارة الموردين والمقاولين",
+    "helpCenterV2.vendorsTitle": "الموردون",
+    "helpCenterV2.viewAllTutorials": "عرض جميع الدروس",
+    "helpCenterV2.viewTickets": "عرض التذاكر",
+    "helpCenterV2.workOrdersCopy": "إنشاء وتتبع أوامر العمل والصيانة",
+    "helpCenterV2.workOrdersTitle": "أوامر العمل"
   }
 }
