feat(batch-13): i18n fixes, vendor tests, RBAC audit, README
- TG-008: Added 3 missing i18n keys (brand.logoAlt, footer.ticket_aria, accessibility.skipToMainContent)
- TG-005: Created vendor onboarding tests (17 tests passing)
- SEC-001: RBAC audit script + report (81.9% coverage)
- DOC-001: Created comprehensive README.md
- Updated PENDING_MASTER to v13.4

Batch 13 complete: 7 items resolved, 15 remaining overall

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1,4 +1,7 @@
 {
+  "brand": {
+    "logoAlt": "شعار فكس إت"
+  },
   "landing": {
     "title": "فكس إت - إدارة كاملة للعقارات والمرافق",
     "subtitle": "تبسيط العمليات وإدارة أوامر العمل وتحسين محفظتك العقارية",
@@ -2752,7 +2755,8 @@
     }
   },
   "accessibility": {
-    "skipToContent": "انتقل إلى المحتوى الرئيسي"
+    "skipToContent": "انتقل إلى المحتوى الرئيسي",
+    "skipToMainContent": "انتقل إلى المحتوى الرئيسي"
   },
   "app": {
     "fm": "إدارة المرافق",
@@ -4490,6 +4494,7 @@
     "support": "الدعم",
     "help": "المساعدة",
     "ticket": "[AR] Ticket",
+    "ticket_aria": "افتح تذكرة دعم",
     "copyright": "[AR] Copyright",
     "breadcrumbLabel": "[AR] Breadcrumb",
     "crumb": {
