feat(i18n): Add missing static keys for dynamic translation patterns
- Added reports.tabs.dashboard key for reports page tabs
- Added fm.properties.status.* keys (active, pending, inactive, vacant, maintenance)
- Added fm.properties.leases.filter.* keys (all, active)
- Regenerated dictionaries (31,190 keys EN/AR)
- Updated PENDING_MASTER.md v13.8: LOW PRIORITY backlog verified (items 21-29)
  - TG-004: Dynamic i18n keys fixed
  - DOC-005: Storybook guide exists
  - TG-005: PII tests verified (443 lines)
  - PF-024: Core Web Vitals foundation ready
  - SEC-026: GraphQL playground secure (dev-only)
  - #28: Database cleanup script exists (286 lines)
  - #29: Migration scripts ready for execution

All 4 dynamic translation files now have proper fallbacks.
GraphQL playground disabled in production.
Feature requests #25 (rate limit dashboard) and #27 (feature flag dashboard) remain in backlog.

--- a/docs/translations/translation-audit.json
+++ b/docs/translations/translation-audit.json
@@ -1,10 +1,10 @@
 {
   "stats": {
-    "files": 820,
-    "usedKeys": 2909,
+    "files": 821,
+    "usedKeys": 2912,
     "hasDynamic": true,
-    "enCount": 31179,
-    "arCount": 31179,
+    "enCount": 31190,
+    "arCount": 31190,
     "parityGap": 0
   },
   "missing": {
@@ -6560,6 +6560,9 @@
     "footer.help": [
       "Fixzit/components/Footer.tsx"
     ],
+    "footer.ticket_aria": [
+      "Fixzit/components/Footer.tsx"
+    ],
     "footer.ticket": [
       "Fixzit/components/Footer.tsx"
     ],
@@ -7114,6 +7117,9 @@
     ],
     "upgrade.guarantee": [
       "Fixzit/components/UpgradePrompt.tsx"
+    ],
+    "accessibility.skipToMainContent": [
+      "Fixzit/components/accessibility/SkipNavigation.tsx"
     ],
     "admin.notifications.errors.historyFetch": [
       "Fixzit/components/admin/AdminNotificationsTab.tsx"
@@ -8010,6 +8016,9 @@
     ],
     "login.passwordPlaceholder": [
       "Fixzit/components/auth/LoginForm.tsx"
+    ],
+    "brand.logoAlt": [
+      "Fixzit/components/auth/LoginHeader.tsx"
     ],
     "otp.errors.invalid": [
       "Fixzit/components/auth/OTPVerification.tsx"
@@ -8991,5 +9000,5 @@
       "Fixzit/components/ui/pagination.tsx"
     ]
   },
-  "timestamp": "2025-12-10T13:53:48.960Z"
+  "timestamp": "2025-12-11T09:02:58.517Z"
 }
