--- a/i18n/sources/fm.translations.json
+++ b/i18n/sources/fm.translations.json
@@ -584,6 +584,11 @@
     "fm.properties.searchProperties": "Search properties...",
     "fm.properties.selectType": "Select type",
     "fm.properties.status": "Status",
+    "fm.properties.status.active": "Active",
+    "fm.properties.status.inactive": "Inactive",
+    "fm.properties.status.pending": "Pending",
+    "fm.properties.status.occupied": "Occupied",
+    "fm.properties.status.vacant": "Vacant",
     "fm.properties.streetAddress": "Street Address",
     "fm.properties.subtitle": "Real estate portfolio and tenant management",
     "fm.properties.support.activeOrg": "Support context: {{name}}",
@@ -1614,6 +1619,11 @@
     "fm.properties.searchProperties": "البحث عن العقارات...",
     "fm.properties.selectType": "اختر النوع",
     "fm.properties.status": "الحالة",
+    "fm.properties.status.active": "نشط",
+    "fm.properties.status.inactive": "غير نشط",
+    "fm.properties.status.pending": "قيد الانتظار",
+    "fm.properties.status.occupied": "مشغول",
+    "fm.properties.status.vacant": "شاغر",
     "fm.properties.streetAddress": "عنوان الشارع",
     "fm.properties.subtitle": "محفظة العقارات وإدارة المستأجرين",
     "fm.properties.support.activeOrg": "سياق الدعم: {{name}}",
