--- a/i18n/sources/missing-keys-patch.translations.json
+++ b/i18n/sources/missing-keys-patch.translations.json
@@ -135,6 +135,8 @@
     "fm.properties.leases.stats.total": "Total Leases",
     "fm.properties.leases.stats.hint": "across all properties",
     "fm.properties.leases.stats.active": "Active Leases",
+    "fm.properties.leases.filter.all": "All",
+    "fm.properties.leases.filter.active": "Active",
     "fm.properties.leases.list.title": "Lease List",
     "fm.properties.leases.list.subtitle": "All leases across properties",
     "fm.properties.leases.error": "Failed to load leases",
@@ -437,6 +439,8 @@
     "fm.properties.leases.stats.total": "إجمالي العقود",
     "fm.properties.leases.stats.hint": "عبر جميع العقارات",
     "fm.properties.leases.stats.active": "العقود النشطة",
+    "fm.properties.leases.filter.all": "الكل",
+    "fm.properties.leases.filter.active": "نشط",
     "fm.properties.leases.list.title": "قائمة العقود",
     "fm.properties.leases.list.subtitle": "جميع العقود عبر العقارات",
     "fm.properties.leases.error": "فشل في تحميل العقود",
