--- a/i18n/sources/reports.translations.json
+++ b/i18n/sources/reports.translations.json
@@ -36,6 +36,7 @@
     "reports.table.status": "Status",
     "reports.table.type": "Type",
     "reports.tabs.builder": "Report Builder",
+    "reports.tabs.dashboard": "Dashboard",
     "reports.tabs.title": "Report Workspace",
     "reports.tabs.viewer": "Report Viewer",
     "reports.title": "Reports",
@@ -83,6 +84,7 @@
     "reports.table.status": "الحالة",
     "reports.table.type": "النوع",
     "reports.tabs.builder": "منشئ التقارير",
+    "reports.tabs.dashboard": "لوحة المتابعة",
     "reports.tabs.title": "مساحة عمل التقارير",
     "reports.tabs.viewer": "عارض التقارير",
     "reports.title": "التقارير",
