chore(i18n): Update translations and pending report v13.24
- Updated PENDING_MASTER.md timestamp to 2025-12-11T13:53:35+03:00
- Regenerated EN/AR dictionaries with latest keys
- Added admin and settings translation keys

Version: 13.24

--- a/i18n/sources/admin.translations.json
+++ b/i18n/sources/admin.translations.json
@@ -41,6 +41,30 @@
     "admin.audit.title": "Audit Logs",
     "admin.audit.user": "User",
     "admin.audit.viewLogs": "View Audit Logs",
+    "filters.actions.export": "Export",
+    "filters.actions.import": "Import",
+    "filters.actions.approve": "Approve",
+    "filters.actions.reject": "Reject",
+    "filters.actions.send": "Send",
+    "filters.actions.receive": "Receive",
+    "filters.actions.upload": "Upload",
+    "filters.actions.download": "Download",
+    "filters.actions.share": "Share",
+    "filters.actions.archive": "Archive",
+    "filters.actions.restore": "Restore",
+    "filters.actions.activate": "Activate",
+    "filters.actions.deactivate": "Deactivate",
+    "filters.actions.custom": "Custom",
+    "filters.entityTypes.owner": "Owner",
+    "filters.entityTypes.invoice": "Invoice",
+    "filters.entityTypes.ticket": "Ticket",
+    "filters.entityTypes.project": "Project",
+    "filters.entityTypes.bid": "Bid",
+    "filters.entityTypes.vendor": "Vendor",
+    "filters.entityTypes.serviceProvider": "Service Provider",
+    "filters.entityTypes.document": "Document",
+    "filters.entityTypes.setting": "Setting",
+    "filters.entityTypes.other": "Other",
     "admin.billing.placeholder": "Billing tooling integrates with /api/admin/billing to surface plan limits, invoices, and dunning events.",
     "admin.billing.subtitle": "Track plans, invoices, and platform revenue operations.",
     "admin.billing.title": "Subscriptions & Billing",
@@ -72,6 +96,73 @@
     "admin.features.description": "Enable/disable features dynamically",
     "admin.features.open": "Open Feature Settings",
     "admin.features.title": "Feature Settings",
+    "admin.featureFlags.subtitle": "Toggle platform capabilities and guardrails across modules.",
+    "admin.featureFlags.lastUpdated": "Evaluated at {{time}}",
+    "admin.featureFlags.search": "Search by name or key",
+    "admin.featureFlags.refresh": "Refresh",
+    "admin.featureFlags.categories.core.title": "Core Platform",
+    "admin.featureFlags.categories.core.description": "Authentication, localization, and notifications",
+    "admin.featureFlags.categories.ui.title": "UI & Experience",
+    "admin.featureFlags.categories.ui.description": "Dashboards, layout options, and visual features",
+    "admin.featureFlags.categories.finance.title": "Finance",
+    "admin.featureFlags.categories.finance.description": "Billing, invoicing, and accounting toggles",
+    "admin.featureFlags.categories.hr.title": "HR & People",
+    "admin.featureFlags.categories.hr.description": "Employee experience and policy controls",
+    "admin.featureFlags.categories.aqar.title": "Property",
+    "admin.featureFlags.categories.aqar.description": "Aqar and property management surface area",
+    "admin.featureFlags.categories.fm.title": "FM",
+    "admin.featureFlags.categories.fm.description": "Facility management flows and automations",
+    "admin.featureFlags.categories.souq.title": "Souq",
+    "admin.featureFlags.categories.souq.description": "Marketplace and commerce capabilities",
+    "admin.featureFlags.categories.integrations.title": "Integrations",
+    "admin.featureFlags.categories.integrations.description": "External systems and API bridges",
+    "admin.featureFlags.categories.experimental.title": "Experimental",
+    "admin.featureFlags.categories.experimental.description": "Beta features and staged rollouts",
+    "featureFlags.summary.total": "Total Flags",
+    "featureFlags.summary.enabled": "Enabled",
+    "featureFlags.summary.rollout": "Rollout",
+    "featureFlags.summary.restricted": "Org Scoped",
+    "featureFlags.error": "Error loading feature flags",
+    "featureFlags.badges.rollout": "{{percent}}% rollout",
+    "featureFlags.badges.defaultOn": "Default on",
+    "featureFlags.badges.prodOff": "Production off",
+    "featureFlags.badges.stagingOn": "Staging on",
+    "featureFlags.badges.devOn": "Dev enabled",
+    "featureFlags.badges.orgRestricted": "Org restricted",
+    "featureFlags.meta.dependencies": "Depends on: {{deps}}",
+    "featureFlags.meta.allowedOrgs": "Allowed orgs: {{count}}",
+    "featureFlags.dependenciesWarning": "Dependencies are disabled: {{deps}}",
+    "featureFlags.updated": "Updated {{flag}}",
+    "featureFlags.updateFailed": "Failed to update feature",
+    "errors.invalidPayload": "Invalid response payload",
+    "admin.rateLimit.title": "Rate Limiting",
+    "admin.rateLimit.description": "Monitor throttling events and login guardrails",
+    "admin.rateLimit.stats": "Recent 429s",
+    "rateLimit.header.title": "Rate Limiting Dashboard",
+    "rateLimit.header.subtitle": "Monitor throttling activity, login guardrails, and distributed rate limiting health.",
+    "rateLimit.header.refreshed": "Refreshed {{time}}",
+    "rateLimit.filter.placeholder": "Filter by endpoint",
+    "rateLimit.actions.refresh": "Refresh",
+    "rateLimit.errors.load": "Unable to load rate limit metrics",
+    "rateLimit.summary.total": "429s in last window",
+    "rateLimit.summary.unique": "Unique clients",
+    "rateLimit.summary.login": "Login guardrail",
+    "rateLimit.summary.attempts": "attempts",
+    "rateLimit.summary.window": "per {{window}} minutes",
+    "rateLimit.summary.distributed": "Distributed status",
+    "rateLimit.summary.redisActive": "Redis active",
+    "rateLimit.summary.redisInactive": "In-memory",
+    "rateLimit.table.title": "Endpoint activity ({{minutes}}m window)",
+    "rateLimit.table.subtitle": "Top endpoints currently being throttled. Includes org-aware rate limits where available.",
+    "rateLimit.table.window": "Window",
+    "rateLimit.table.empty": "No recent rate limit events",
+    "rateLimit.table.endpoint": "Endpoint",
+    "rateLimit.table.hits": "Hits",
+    "rateLimit.table.unique": "Unique keys",
+    "rateLimit.table.orgs": "Orgs",
+    "rateLimit.table.global": "Global",
+    "rateLimit.redis.warning": "Recent Redis warning",
+    "rateLimit.redis.lastErrorAt": "Last error at {{time}}",
     "admin.featureSettings.badges.beta": "Beta",
     "admin.featureSettings.badges.comingSoon": "Coming Soon",
     "admin.featureSettings.badges.new": "New",
@@ -498,6 +589,30 @@
     "admin.audit.title": "سجلات التدقيق",
     "admin.audit.user": "المستخدم",
     "admin.audit.viewLogs": "عرض سجلات التدقيق",
+    "filters.actions.export": "تصدير",
+    "filters.actions.import": "استيراد",
+    "filters.actions.approve": "اعتماد",
+    "filters.actions.reject": "رفض",
+    "filters.actions.send": "إرسال",
+    "filters.actions.receive": "استلام",
+    "filters.actions.upload": "رفع",
+    "filters.actions.download": "تنزيل",
+    "filters.actions.share": "مشاركة",
+    "filters.actions.archive": "أرشفة",
+    "filters.actions.restore": "استعادة",
+    "filters.actions.activate": "تفعيل",
+    "filters.actions.deactivate": "تعطيل",
+    "filters.actions.custom": "مخصص",
+    "filters.entityTypes.owner": "مالك",
+    "filters.entityTypes.invoice": "فاتورة",
+    "filters.entityTypes.ticket": "تذكرة",
+    "filters.entityTypes.project": "مشروع",
+    "filters.entityTypes.bid": "مزايدة",
+    "filters.entityTypes.vendor": "مزود",
+    "filters.entityTypes.serviceProvider": "مزود خدمة",
+    "filters.entityTypes.document": "مستند",
+    "filters.entityTypes.setting": "إعداد",
+    "filters.entityTypes.other": "أخرى",
     "admin.billing.placeholder": "اعتمد على واجهات /api/admin/billing لعرض حدود الخطة والفواتير وحالات التحصيل.",
     "admin.billing.subtitle": "تتبع الخطط والفواتير وعمليات الإيرادات.",
     "admin.billing.title": "الاشتراكات والفوترة",
@@ -529,6 +644,73 @@
     "admin.features.description": "تفعيل/تعطيل الميزات ديناميكياً",
     "admin.features.open": "فتح إعدادات الميزات",
     "admin.features.title": "إعدادات الميزات",
+    "admin.featureFlags.subtitle": "تفعيل قدرات النظام وحماياته عبر الوحدات.",
+    "admin.featureFlags.lastUpdated": "تم التقييم في {{time}}",
+    "admin.featureFlags.search": "ابحث بالاسم أو المفتاح",
+    "admin.featureFlags.refresh": "تحديث",
+    "admin.featureFlags.categories.core.title": "المنصة الأساسية",
+    "admin.featureFlags.categories.core.description": "المصادقة، دعم اللغات، والإشعارات",
+    "admin.featureFlags.categories.ui.title": "الواجهة والتجربة",
+    "admin.featureFlags.categories.ui.description": "لوحات التحكم، التخطيطات، والميزات البصرية",
+    "admin.featureFlags.categories.finance.title": "المالية",
+    "admin.featureFlags.categories.finance.description": "الفوترة والفواتير وأدوات المحاسبة",
+    "admin.featureFlags.categories.hr.title": "الموارد البشرية",
+    "admin.featureFlags.categories.hr.description": "تجربة الموظفين والسياسات",
+    "admin.featureFlags.categories.aqar.title": "العقارات",
+    "admin.featureFlags.categories.aqar.description": "مساحات إدارة العقارات وأقار",
+    "admin.featureFlags.categories.fm.title": "إدارة المرافق",
+    "admin.featureFlags.categories.fm.description": "تدفقات وأتمتة إدارة المرافق",
+    "admin.featureFlags.categories.souq.title": "سوق",
+    "admin.featureFlags.categories.souq.description": "قدرات السوق والتجارة",
+    "admin.featureFlags.categories.integrations.title": "التكاملات",
+    "admin.featureFlags.categories.integrations.description": "الأنظمة الخارجية وجسور الـ API",
+    "admin.featureFlags.categories.experimental.title": "تجريبي",
+    "admin.featureFlags.categories.experimental.description": "ميزات بيتا والإصدارات التدريجية",
+    "featureFlags.summary.total": "إجمالي الخصائص",
+    "featureFlags.summary.enabled": "مفعلة",
+    "featureFlags.summary.rollout": "متدرجة",
+    "featureFlags.summary.restricted": "مقيدة للمنظمة",
+    "featureFlags.error": "تعذر تحميل الخصائص",
+    "featureFlags.badges.rollout": "{{percent}}٪ طرح تدريجي",
+    "featureFlags.badges.defaultOn": "مفعلة افتراضياً",
+    "featureFlags.badges.prodOff": "معطلة في الإنتاج",
+    "featureFlags.badges.stagingOn": "مفعلة في Staging",
+    "featureFlags.badges.devOn": "مفعلة في التطوير",
+    "featureFlags.badges.orgRestricted": "مقيدة للمنظمة",
+    "featureFlags.meta.dependencies": "يعتمد على: {{deps}}",
+    "featureFlags.meta.allowedOrgs": "المنظمات المسموح بها: {{count}}",
+    "featureFlags.dependenciesWarning": "التبعيات معطلة: {{deps}}",
+    "featureFlags.updated": "تم تحديث {{flag}}",
+    "featureFlags.updateFailed": "فشل تحديث الخاصية",
+    "errors.invalidPayload": "استجابة غير صالحة",
+    "admin.rateLimit.title": "تحديد المعدل",
+    "admin.rateLimit.description": "مراقبة أحداث الخنق وحماية تسجيل الدخول",
+    "admin.rateLimit.stats": "أحدث رموز 429",
+    "rateLimit.header.title": "لوحة تحديد المعدل",
+    "rateLimit.header.subtitle": "مراقبة نشاط الخنق وحالة الحماية الموزعة.",
+    "rateLimit.header.refreshed": "تم التحديث {{time}}",
+    "rateLimit.filter.placeholder": "تصفية حسب المسار",
+    "rateLimit.actions.refresh": "تحديث",
+    "rateLimit.errors.load": "تعذر تحميل بيانات تحديد المعدل",
+    "rateLimit.summary.total": "رموز 429 في النافذة",
+    "rateLimit.summary.unique": "عملاء فريدون",
+    "rateLimit.summary.login": "حماية تسجيل الدخول",
+    "rateLimit.summary.attempts": "محاولات",
+    "rateLimit.summary.window": "كل {{window}} دقيقة",
+    "rateLimit.summary.distributed": "الحالة الموزعة",
+    "rateLimit.summary.redisActive": "Redis فعال",
+    "rateLimit.summary.redisInactive": "ذاكرة داخلية",
+    "rateLimit.table.title": "نشاط المسارات (نافذة {{minutes}} دقيقة)",
+    "rateLimit.table.subtitle": "أعلى المسارات التي يتم خنقها حالياً. تتضمن تحديد المعدل للمنظمة عند توفره.",
+    "rateLimit.table.window": "النافذة",
+    "rateLimit.table.empty": "لا توجد أحداث تحديد معدل حديثة",
+    "rateLimit.table.endpoint": "المسار",
+    "rateLimit.table.hits": "العدد",
+    "rateLimit.table.unique": "مفاتيح فريدة",
+    "rateLimit.table.orgs": "المنظمات",
+    "rateLimit.table.global": "عالمي",
+    "rateLimit.redis.warning": "تحذير Redis حديث",
+    "rateLimit.redis.lastErrorAt": "آخر خطأ في {{time}}",
     "admin.featureSettings.badges.beta": "تجريبي",
     "admin.featureSettings.badges.comingSoon": "قريباً",
     "admin.featureSettings.badges.new": "جديد",
