--- a/i18n/sources/settings.translations.json
+++ b/i18n/sources/settings.translations.json
@@ -19,6 +19,8 @@
     "settings.preferences.arabic": "Arabic",
     "settings.preferences.dark": "Dark",
     "settings.preferences.english": "English",
+    "settings.preferences.currency": "Currency",
+    "settings.preferences.currencyHint": "Applies to pricing, invoices, and dashboards",
     "settings.preferences.language": "Language",
     "settings.preferences.light": "Light",
     "settings.preferences.riyadh": "Asia/Riyadh (GMT+3)",
@@ -94,6 +96,8 @@
     "settings.preferences.arabic": "العربية",
     "settings.preferences.dark": "داكن",
     "settings.preferences.english": "الإنجليزية",
+    "settings.preferences.currency": "العملة",
+    "settings.preferences.currencyHint": "تطبق على التسعير والفواتير ولوحات التحكم",
     "settings.preferences.language": "اللغة",
     "settings.preferences.light": "فاتح",
     "settings.preferences.riyadh": "آسيا/الرياض (GMT+3)",
